# Norkkie

./: .gitignore  CMakeLists.txt  Makefile  README  index.html
rez/: ctrl.dot
src/: input.c  input.h  main.c  model.h  msel.h  msel_func.c  msel_func.h  msel_func_model.c  msel_func_root.c  nurbs.c  nurbs.h  pack_tools.c  pack_tools.h
src/lib/norkkie/: nurbs.h  pack_tools.h
src/lib/norkkie/src/: nurbs.c  pack_tools.c
src/main/: main.c  model.h  msel.c  msel_func.h  msel_func_model.c  msel_func_root.c
src/test/nurbs/: main.c
